USWDS - Site Alert - Repair top margin, broken by #4922
PR #4922 added a top margin to the site alert, which looks wrong
when a site alert immediately follows a gov banner.

--- a/packages/uswds-core/src/styles/mixins/helpers/alert-status-styles.scss
+++ b/packages/uswds-core/src/styles/mixins/helpers/alert-status-styles.scss
@@ -25,10 +25,6 @@
   border-left: units($theme-alert-bar-width) solid color("base-light");
   color: color($banner-text-color-token);
 
-  * + & {
-    margin-top: units(2);
-  }
-
   .usa-alert__body {
     @include border-box-sizing;
     @include typeset($theme-alert-font-family);
